Fix border radius dot slider on mobile

--- a/_sass/components/_layout.scss
+++ b/_sass/components/_layout.scss
@@ -277,6 +277,7 @@
             height: 14px;
             width: 14px;
             border-radius: 100%;
+            -webkit-border-radius: 100%;
             background: $pale-red;
             border: none;
             opacity: 0.34;
@@ -288,6 +289,7 @@
             height: 18px;
             width: 18px;
             border-radius: 100%;
+            -webkit-border-radius: 100%;
             outline: none;
           }
         }
